modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="part1">
-            <img src="images/hero.jpg" alt="Hero">
+            <img src="images/hero.jpg" alt="Hero" class="part2">
             <h1>Rafting Travel</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy client" class="special">
