new file:   images/headset_mic_24dp.png 	modified:   wwr/about.html 	modified:   wwr/contact.html 	new file:   wwr/images/headset_mic_20dp.svg 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -29,7 +29,7 @@
     <main>
         <div class="hero part1">
             <img src="images/hero.jpg" alt="Hero" class="part2">
-            <h1>Rafting Travel</h1>
+            <h1 class="m_d_h1">Rafting Travel</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy client" class="special">
                 <p>Rafting Travel an adventure company. <b>Our purpose</b> is to offer our clients safe rafting trips, 
