--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,20 +30,26 @@
     </header>
     <main>
         <div class="part1">
-            <img src="images/hero.jpg" alt="Hero" class="part2">
-            <h1>Rafting Travel</h1>
-            <article>
-                <img src="images/happy_client.jpg" alt="Happy client" class="special">
-                <p>Rafting Travel an adventure company. <b>Our purpose</b> is to offer our clients safe rafting trips, 
-                    in stunning places, with the best quality equipment and support from experienced and highly 
-                    trained professionals.Our mission is to offer our customers close contact with nature, 
-                    exciting experiences and lots of fun, with the security of assistance from qualified 
-                    professionals and at a fair price. <b>Our moto</b> is, 
-                    <em>Rafting Travel adventure and joy your way!</em></p>
-            </article>
+            <img src="images/wwr_image6.jpg" alt="Image White Water Rafting" class="part2">
+            
+            <h1 class="m_d_h2">Rafting Come be happy!</h1>
         </div>
-        <div class="hero">
-            <img src="images/wwr_image6.jpg" alt="Image White Water Rafting">
+        <div class="f_act"> 
+            <form>
+                <legend>Sign up for our newsletter</legend>
+                <fieldset>
+                    <label for="fname">Full name:</label>
+                    <input type="text" id="fname" name="fname">
+                    <label for="f_email">Email</label>
+                    <input type="email" name="f_email" id="f_email">
+                    <button type="submit" class="f_act_b">Sign UP</button>
+                </fieldset> 
+            </form>
+            <div class = "contact">
+                <p>Our trips!</p>
+                <a href="contact.html"><img src="images/wwr_image3.jpg" alt="HeadSet"></a>
+                <a href="contact.html">Click here to find out about our trips</a>
+            </div>
         </div>
     </main>
     <footer class="base">
