modified:   wwr/index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -51,6 +51,9 @@
                 <a href="contact.html">Click here to find out about our trips</a>
             </div>
         </div>
+        <div class="interspace">
+            <h2>Trip Descriptions</h2>
+        </div>
     </main>
     <footer class="base">
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
