new file:   wwr/images/raft1.jpeg 	new file:   wwr/images/raft2.jpeg 	new file:   wwr/images/raft3.jpeg 	new file:   wwr/images/raft4.webp 	modified:   wwr/index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,7 +32,7 @@
         <div class="part1">
             <img src="images/wwr_image6.jpg" alt="Image White Water Rafting" class="part2">
             
-            <h1 class="m_d_h2">Rafting Come be happy!</h1>
+            <h1 class="m_d_h2">Rafting Come be  Happy!</h1>
         </div>
         <div class="f_act"> 
             <form>
@@ -52,7 +52,18 @@
             </div>
         </div>
         <div class="interspace">
-            <h2>Trip Descriptions</h2>
+        </div>
+
+        <div class = "purposesect">
+            <h2>Purpose and Offerings</h2>
+            <p>Purpose</p>
+            <p>Offerings</p>
+            <img src="images/wwr_image1.jpg" alt="White water image 1">
+            <img src="images/wwr_image2.jpg" alt="White water image 2">
+            <img src="images/wwr_image3.jpg" alt="White water image 3">
+        </div>
+
+        <div class="interspace">
         </div>
     </main>
     <footer class="base">
