--- a/wwr/index.html
+++ b/wwr/index.html
@@ -55,11 +55,12 @@
         </div>
 
         <div class = "purposesect">
-            <h2>Purpose and Offerings</h2>
-            <p>Purpose</p>
-            <p>Offerings</p>
-            <img src="images/wwr_image1.jpg" alt="White water image 1">
-            <img src="images/wwr_image2.jpg" alt="White water image 2">
+            <p>High quality materials</p>
+            <p>Highly qualified team</p>
+            <p>Guaranteed fun and adventure</p>
+
+            <img src="images/raft1.jpeg" alt="White water image 1">
+            <img src="images/raft4.webp" alt="White water image 2">
             <img src="images/wwr_image3.jpg" alt="White water image 3">
         </div>
 
