--- a/wwr/index.html
+++ b/wwr/index.html
@@ -60,8 +60,8 @@
             <p>Guaranteed fun and adventure</p>
 
             <img src="images/raft1.jpeg" alt="White water image 1">
-            <img src="images/raft4.webp" alt="White water image 2">
-            <img src="images/wwr_image3.jpg" alt="White water image 3">
+            <img src="images/raft4.png" alt="White water image 2">
+            <img src="images/rafting6.jpeg" alt="White water image 3">
         </div>
 
         <div class="interspace">
