modified:   wwr/index.html 	modified:   wwr/styles/rafting.css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -51,17 +51,15 @@
                 <a href="contact.html">Click here to find out about our trips</a>
             </div>
         </div>
-        <div class="interspace">
-        </div>
+            <div class = "purposesect">
+            <img src="images/wwr_image7.jpeg" alt="White water image 1">
+            <img src="images/wwr_image12.jpeg" alt="White water image 2">
+            <img src="images/wwr_image8.jpeg  " alt="White water image 3">
 
-        <div class = "purposesect">
             <p>High quality materials</p>
-            <p>Highly qualified team</p>
-            <p>Guaranteed fun and adventure</p>
+            <p>breathtaking landscapes</p>
+            <p>Fun for the whole family</p>
 
-            <img src="images/raft1.jpeg" alt="White water image 1">
-            <img src="images/raft4.png" alt="White water image 2">
-            <img src="images/rafting6.jpeg" alt="White water image 3">
         </div>
 
         <div class="interspace">
