modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="theader">
+    <header class="t_hd">
         <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
         <nav class="comp_nav">
             <a href="index.html" class="comp_nav_a">Home</a>
@@ -37,7 +37,6 @@
         <div class="f_act"> 
             <form>
                 <fieldset>
-                    <legend>Sign up for our newsletter</legend>
                     <label for="fname">Full name:</label>
                     <input type="text" id="fname" name="fname">
                     <label for="f_email">Email</label>
@@ -78,12 +77,11 @@
                 <p>High quality materials</p>
                 <p>breathtaking landscapes</p>
                 <p>Fun for the whole family</p>
-            </div>
-
-        
+            </div>    
     </main>
     <footer class="base">
-        <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
+        <a href="mockup/Contact_Us_Page_Wireframe.png">Wireframe</a>
+        <p class="paragraph-base1">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav class="base-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
             <a href="htpps://twitter.com"><img src="images/twitter_icon.webp" alt="Twitter"></a>
