--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="theader">
+    <header class="t_hd">
         <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
         <nav class="comp_nav">
             <a href="index.html" class="comp_nav_a">Home</a>
@@ -157,7 +157,8 @@
          </div> 
     </main>
     <footer class="base">
-        <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
+        <a href="mockup/Contact_Us_Page_Wireframe.png">Wireframe</a>
+        <p class="paragraph-base1">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav class="base-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
             <a href="htpps://twitter.com"><img src="images/twitter_icon.webp" alt="Twitter"></a>
