--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand+SC&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="theader">
+    <header class="t_hd">
         <img src="images/logo.jpg" alt="Rafting Travel Company Logo">
         <nav class="comp_nav">
             <a href="index.html" class="comp_nav_a">Home</a>
