--- a/wwr/index.html
+++ b/wwr/index.html
@@ -37,6 +37,7 @@
         <div class="f_act"> 
             <form>
                 <fieldset>
+                    <legend>Fill in here to subscribe to our newsletter</legend>
                     <label for="fname">Full name:</label>
                     <input type="text" id="fname" name="fname">
                     <label for="f_email">Email</label>
