modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Travel Company About Us</title>
+    <title>Rafting Travel Company About Us Page</title>
     <meta name="description" content="Find out more about who we are, our contacts, address, among others.">
     <meta name="author" content="Robson Paulo da Silva">
 
