--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
     <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Rafting Travel Company Contact Us</title>
+    <title> Rafting Travel Company Contact Us contact_us_page_Wireframe</title>
     <meta name="description" content="Contact Us. Find our contact details here, leave us your opinions, suggestions and complaints!">
     <meta name="author" content="Robson Paulo da Silva">
 
