--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,8 @@
     <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Travel Company Trips</title>
-    <meta name="description" content="Our company offers high quality equipment, experienced and qualified guides, so that you have a unique, excellent and unforgettable experience.">
+    <title>Rafting Travel Company Trips Page</title>
+    <meta name="description" content="This page contains our main offers, the purpose of our company, access to subscribe to our newsletter, to contract our services and much more.">
 
    
     <meta name="author" content="Robson Paulo da Silva">
