--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -4,7 +4,7 @@
     <!-- Including default tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Travel Company Trips</title>
+    <title>Rafting Travel Company Trips Page</title>
     <meta name="description" content="Our company offers high quality equipment, experienced and qualified guides, so that you have a unique, excellent and unforgettable experience.">
 
    
