modified:   wwr/about.html 	modified:   wwr/contact.html 	new file:   wwr/images/river-wide3 (1).jpg 	new file:   wwr/images/salmon-kayak-banner1.jpg 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="hero part1">
-            <img src="images/hero.jpg" alt="Hero" class="part2">
+            <img src="images/river-wide3.jpg" alt="Hero" class="part2">
             <h1 class="m_d_h1">Rafting Travel</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy client" class="special">
@@ -59,7 +59,7 @@
                 <p class="c1">
                     Talk to our team to find out more about our wonderful rafting circuits, for suggestions and complaints.
                 </p>
-                <p>
+                <p class="c1">
                     Email:contact@rafting.com
                 </p>
                 <form action="mailto:contact@rafting.com" class=" c1">
@@ -78,6 +78,8 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.326563457703!2d-43.18164652385474!3d-22.901322779258948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f6b9ebdff0d%3A0xfddce16d156a199e!2sAv.%20Pres.%20Vargas%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1sen!2sbr!4v1716554526277!5m2!1sen!2sbr" width="350" height="300"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
+        <div class="interspace">
+        </div>
         <div class="employeegrid">
             <h3>Meet our employees</h3>
             <figure class="p1">
@@ -92,6 +94,8 @@
                 <img src="images/happyemployee3.jpg" alt="Happy employee Ana and John">
                 <figcaption>Our difference is enthusiasm (John) </figcaption>
             </figure>
+        </div>
+        <div class="interspace">
         </div>
         <div class = "fclient">
             <h3>Send Us a Message</h3>
