--- a/wwr/about.html
+++ b/wwr/about.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <div class="part1">
-            <img src="images/hero.jpg" alt="Hero" class="part2">
+            <img src="images/river-wide3.jpg" alt="Hero" class="part2">
             <h1 class="m_d_h1">Rafting Travel</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy client" class="special">
