new file:   wwr/images/hero_transparency_1024 (1).png 	new file:   wwr/images/river-wide3 (2).jpg 	new file:   wwr/images/salmon-kayak-banner2 (1).jpg 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <div class="part1">
-            <img src="images/wwr_image6.jpg" alt="Image White Water Rafting" class="part2">
+            <img src="images/salmon-kayak-banner1.jpg" alt="Image White Water Rafting" class="part2">
             
             <h1 class="m_d_h2">Rafting Come be  Happy!</h1>
         </div>
