modified:   wwr/about.html 	modified:   wwr/contact.html 	modified:   wwr/images/wwr_image12.jpeg 	modified:   wwr/images/wwr_image7.jpeg 	modified:   wwr/index.html 	modified:   wwr/styles/rafting.css 	modified:   wwr/trips.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -61,7 +61,7 @@
                 <div>
                     <p>
                         Our purpose is to bring our clients excitement, joy, adventure and intimate contact with nature, 
-                        through rafting using quality equipment, with highly qualified staff and on breathtaking routes!<br>
+                        through rafting using quality equipment, with highly qualified staff and on breathtaking routes!
                         We offer itineraries adapted to various needs. For those who like extreme adventures, try the De 
                         Contas River option. If what you're looking for is rafting with the kids, choose São Francisco River 
                         Trip and if you want to immerse yourself in an adventure amid stunning landscapes, your option is Amazonas 
@@ -70,14 +70,21 @@
                 </div>
                 
                 <div class="f_alig">
-                    <img src="images/wwr_image7.jpeg" alt="White water image 1">
-                    <img src="images/wwr_image12.jpeg" alt="White water image 2">
-                    <img src="images/wwr_image8.jpeg  " alt="White water image 3">
+                    <figure>
+                        <img src="images/wwr_image7.jpeg" alt="White water image 1" >
+                        <figcaption>High quality materials</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/wwr_image12.jpeg" alt="White water image 2">
+                        <figcaption>Breathtaking landscapes</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="images/wwr_image8.jpeg  " alt="White water image 3">
+                        <figcaption>
+                            Fun for the whole family
+                        </figcaption>
+                    </figure>
                 </div>
-
-                <p>High quality materials</p>
-                <p>breathtaking landscapes</p>
-                <p>Fun for the whole family</p>
             </div>    
     </main>
     <footer class="base">
