modified:   wwr/about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -88,7 +88,7 @@
             </div> 
         </section>
     </main>
-    <footer class="base">
+    <footer>
         <p class="paragraph-base">©2024 ⚓ Rafting Travel ⚓ Robson Paulo da Silva</p>
         <nav class="base-nav">
             <a href="https://facebook.com"><img src="images/facebook_icon.webp" alt="Facebook"></a>
